--- a/components/VehicleCard/VehicleCard.module.css
+++ b/components/VehicleCard/VehicleCard.module.css
@@ -6,15 +6,19 @@
 }
 
 .content {
-  margin-top: 14px;
+  margin-top: 16px;
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 .header {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+
   margin-bottom: 8px;
+  align-items: baseline;
 }
 .title {
   font-family: var(--font-family);
@@ -32,25 +36,26 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 125%;
+
   color: var(--main);
 }
-.tags {
+.tagsRow {
   font-family: var(--font-family);
   font-weight: 400;
   font-size: 12px;
   line-height: 133%;
   color: var(--gray);
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   gap: 6px;
 }
 
-.tags span {
+.tagsRow span {
   display: flex;
   align-items: center;
 }
 
-.tags span:not(:last-child)::after {
+.tagsRow span:not(:last-child)::after {
   content: "";
   display: inline-block;
   width: 1px;
@@ -63,7 +68,6 @@
   width: 276px;
   height: 44px;
   background: var(--button);
-
   border-radius: 12px;
   border: none;
   cursor: pointer;
@@ -80,9 +84,9 @@
   background-color: var(--button-hover);
 }
 .imageWrapper {
-  position: relative; 
+  position: relative;
   width: 100%;
-  height: 248px; 
+  height: 248px;
   overflow: hidden;
   border-radius: 12px;
 }
@@ -91,8 +95,15 @@
   position: absolute;
   top: 16px;
   right: 16px;
-  z-index: 10; 
+  z-index: 10;
   background: transparent;
   border: none;
   cursor: pointer;
+}
+.details {
+  margin-top: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  height: 40px;
 }
