--- a/components/VehicleCard/VehicleCard.module.css
+++ b/components/VehicleCard/VehicleCard.module.css
@@ -77,6 +77,9 @@
   font-size: 16px;
   line-height: 125%;
   color: var(--white);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .btn:hover,
