update input from/to

--- a/app/catalog/page.module.css
+++ b/app/catalog/page.module.css
@@ -38,7 +38,7 @@
 
 .loadMoreBtn:hover,
 .loadMoreBtn:focus {
-  color: var(--button-hover);
+  border-color: var(--button-hover);
   transition: color 250ms ease;
 }
 .centeredLoader {
